==================================================
Commit Hash: 2f26fa7e779a7c62869b761281b182afbd064105
Author: Niwatori401
Date: Sat Sep 30 23:43:31 2023

Fix bug with capacity alteration (courtesy Steven)

==================================================
Commit Hash: 2a0b7b30e3a7a4fd8ca8f42ca9895ab4ad4c4f93
Author: Niwatori401
Date: Thu Sep 28 13:00:01 2023

Add preliminary race support for Ursine of the Rim
Modify patch maker to parse &quot and &comma as literals
Add new patch maker subpatch

==================================================
Commit Hash: b11569c2bd157e09ea2856a8e821657c3238df2f
Author: Niwatori401
Date: Thu Sep 28 10:30:41 2023

Add black and white texture option for races
Racial dictionaries now set in raw text
Remove unused textures

==================================================
Commit Hash: f22d9c179ba45ae589baffaa1774815abe5d0b31
Author: Niwatori401
Date: Tue Sep 26 11:53:40 2023

Fix typos
Rename enbiggener -> embiggener

==================================================
Commit Hash: 228343d05282835bb05315d0f98570cc8ba51e4a
Author: Niwatori401
Date: Tue Sep 26 10:14:08 2023

Update perk icons
Update various sprites
Update localization to reflect perk rebalances

==================================================
Commit Hash: 928521e4072a1b29ade40922cdec5e3bc800bc38
Author: Niwatori401
Date: Mon Sep 25 21:52:12 2023

Add race entries for Ursine races

==================================================
Commit Hash: 657d67622c559c189710bf51bd1495629a34f6bd
Author: Niwatori401
Date: Mon Sep 25 11:04:41 2023

Update stats for the following:
* Gluttonium price
* Zenith orb effectiveness and build cost
* Gluttonium fabricator build cost
* Crammed Croissant
* Mechanite Muffin
* Packed Pizza
* La Bombe
* Alpha Ball
* Omega Ball
* Ultratech cooking module
* Experimental belittler
* Flab grenades
* Novatech gloves
* Novatech collar
* Novatech jumpsuit
* Novatech proto-suit
* Novatech belt
* Novatech hyperbelt
* Small food storage vat